# robot-task-ws-protocol

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: concurrency.md  migration.md  protocol.md
examples/python/: coordinator.py  legacy_camera_adapter.py  legacy_yam_control_adapter.py  package_change_demo.py  so_leader_protocol_bridge.py  submit_task.py  viewer_server.py  worker.py
migrated/can-mac/: MIGRATION.md  README.md  pyproject.toml
migrated/can-mac/_yamtest/: __init__.py  cli.py  dashboard.py
migrated/can-mac/can-bridge/: can_bridge.py  slcan_bridge.py  start_bimanual_bridges.sh
migrated/can-mac/can-bridge/.cargo/: config.toml
migrated/can-mac/schemas/: yam_exec_action.schema.json  yam_pixel_locator.schema.json
migrated/can-mac/scripts/: camera_http_server.py  direct_bimanual_parallel.py  direct_robot_control.py  droidcam_mjpeg_probe.py  http_camera_fetch.py  http_camera_probe.py  hybrid_robot_loop.py  leader_switchboard.py  local_modal_robot_bridge.py  molmo_live_infer.py  molmo_payload_probe.py  multi_camera_ws_client.py  multi_camera_ws_server.py  opencv_camera_probe.py  opencv_util.py  orbbec_camera_server.py  orbbec_wrist.py  so_leader_ws_bridge.py  test_molmoact2_bimanual_yam.py  yam_cartesian_control.py  yam_codex_snapshot.py  yam_control_ws_server.py  yam_depth_geometry.py  yam_exec_loop.py  yam_intentional_probe.py  yam_leader_ws_bridge.py  yam_lerobot_dataset.py  yam_lerobot_policy_server.py  yam_move_to_depth_pixel.py  yam_samba_dance_ws.py  yam_visual_servo_touch.py  yam_ws_client.py
migrated/can-mac/web/: multi_camera_viewer.html
schemas/: image-frame.schema.json  leader-state.schema.json  message.schema.json  motor-command.schema.json  robot-state.schema.json  state-patch.schema.json  status-report.schema.json  task.schema.json
src/robot_task_ws/: __init__.py  change_store.py  coordinator.py  protocol.py
web/: viewer.html
