[project]
name = "yamtest"
version = "0.0.1"
description = "YAM teleop viewer"
requires-python = ">=3.10,<3.12"
dependencies = [
    "mjviser",
    "mujoco>=3.6.0",
    "numpy>=2.0",
    "pyserial>=3.5",
    "viser>=0.2.0",
    "i2rt",
    "pyorbbecsdk>=1.3.2",
    "opencv-python>=4.13.0.92",
    "transformers>=5.8.0",
    "pillow>=12.1.1",
    "huggingface-hub>=1.14.0",
    "modal>=1.4.2",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.30.0",
    "websocket-client>=1.8.0",
]

[project.scripts]
yamctl = "_yamtest.cli:main"
yam-dashboard = "_yamtest.dashboard:main"

[tool.uv]
override-dependencies = ["mujoco>=3.6.0"]

[tool.uv.sources]
i2rt = { path = "i2rt" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["_yamtest"]
